ocelot/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ocelot-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: ocelot.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: ocelot
          servicePort: 80
